[package]
name = "api-health-crutch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.13", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
log = "0.4.22"
env_logger = "0.11.5"
